Send commands to Bittle implemented

--- a/app/src/main/res/layout/activity_device_paired.xml
+++ b/app/src/main/res/layout/activity_device_paired.xml
@@ -22,7 +22,9 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline12"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0" >
+
+    </ListView>
 
     <TextView
         android:id="@+id/textView"
