--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/amiko"
-        android:text="Petoi Bittle Bluetooth Controller"
+        android:text="@string/title"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30sp"
